<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null">


    <include
        android:id="@+id/dm_sub_categories"
        layout="@layout/sub_categories_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_exposed_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dm_sub_categories" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_search"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/null_background_brown_border"
        android:inputType="text"
        android:paddingStart="8dp"
        android:textColor="@color/primary_color"
        app:layout_constraintBottom_toBottomOf="@+id/btn_search"
        app:layout_constraintEnd_toStartOf="@+id/btn_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_search" />


    <ImageButton
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/null_background_brown_border"
        android:padding="12dp"
        android:src="@drawable/search_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_exposed_menu" />

    <RadioGroup
        android:id="@+id/category_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:measureWithLargestChild="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/whole_catalogue_rd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/whole_catalogue"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            app:buttonTint="@color/primary_color" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/this_category_rd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_category"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            app:buttonTint="@color/primary_color" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/search_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@null"
        android:buttonTint="@color/primary_color"
        android:paddingStart="8dp"
        android:text="@string/search_description"
        android:textColor="@color/primary_color"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/category_state"
        tools:layout_editor_absoluteX="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>